# lg-mcp-docs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/lg_docs_mcp/: checker.py  db.py  scraper.py  server.py
tests/: test_checker.py  test_db.py  test_mcp_protocol.py  test_scraper.py  test_server.py  test_usage.py
