[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lg-docs-mcp"
dynamic = ["version"]
description = "MCP server for LG webOS TV developer documentation — search and browse webostv.developer.lge.com locally"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    {name = "satanas"},
]
keywords = ["mcp", "lg", "webos", "webostv", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.26.0,<2",
    "crawl4ai>=0.8.0,<2",
    "beautifulsoup4>=4.12.0,<5",
]

[project.urls]
Homepage = "https://github.com/satanas/lg-docs-mcp"
Repository = "https://github.com/satanas/lg-docs-mcp"
Issues = "https://github.com/satanas/lg-docs-mcp/issues"

[project.scripts]
lg-docs-mcp = "lg_docs_mcp.server:main"

[tool.hatch.version]
path = "src/lg_docs_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lg_docs_mcp"]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lg_docs_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
